<resources>
    <string name="app_name">MarvyGroup</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_apply_form">Apply Form</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="internal_storage">Internal storage</string>
    <string name="select_color">Select a color</string>
    <string name="memory_clear">MC</string>
    <string name="memory_recall">MR</string>
    <string name="memory_add">M+</string>
    <string name="memory_subtract">M-</string>
    <string name="memory_store">MS</string>
    <string name="no_value">Not Available</string>
    <string name="percentage">%</string>
    <string name="root">√</string>
    <string name="square">x²</string>
    <string name="fraction">⅟x</string>
    <string name="save_as">Select Document Type</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="backspace">⌫</string>
    <string name="division">÷</string>
    <string name="plus_minus">±</string>
    <string name="comma">,</string>
    <string name="equal">＝</string>
    <string name="addition">+</string>
    <string name="subtraction">−</string>
    <string name="multiplication">×</string>

    <string name="value_9">9</string>
    <string name="value_8">8</string>
    <string name="value_7">7</string>
    <string name="value_6">6</string>
    <string name="value_5">5</string>
    <string name="value_4">4</string>
    <string name="value_3">3</string>
    <string name="value_2">2</string>
    <string name="value_1">1</string>
    <string name="value_0">0</string>

    <string name="menu_item_history">History</string>

    <string name="history">History: </string>
    <string name="clear_history">Clear history</string>
    <string name="history_result">"History result: "</string>
    <string name="no_history">"There's no history yet."</string>
    <string name="history_cleared">History cleared</string>

    <string name="memory_cleared_toast">Memory cleared</string>
    <string name="memory_recalled_toast">Memory recalled</string>
    <string name="memory_added_toast">"Memory added: "</string>
    <string name="memory_subtracted_toast">"Memory subtracted: "</string>
    <string name="memory_stored_toast">"Memory stored: "</string>
    <string name="login">Sign In</string>
    <string name="policy">A Partner In Corporate Growth</string>
    <string name="password">Password</string>
    <string name="nav_header_desc">Om Prakash</string>
    <string name="send">Send</string>


    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="cat_textfield_outline_helper_text">NewPassword</string>
    <string name="cat_textfield_label">New Password</string>
    <string name="cat_textfield_label2">Confirm New Password</string>
    <string name="emp_code">Employee Code</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="employee_code">Employee Code</string>
    <string name="latLong">Longitude: %.3f, Latitude: %.3f</string>
    <string name="lat">latitude: %.3f</string>
    <string name="lon">longitude: %.3f</string>
    <string name="enable_gps">Please enable your gps</string>
    <string name="permission_request">App requires location permission</string>
    <string name="apply_for_a_job">Apply for a job !</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="settings">Settings</string>
    <string name="attach_documents">Attach Documents</string>
    <string name="home">Home</string>
    <string name="homeFragment">HomeFragment</string>
    <string name="my_profile">My Profile</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="uploaded_doc">Uploaded Documents</string>
    <string name="uploaded_pdf">Uploaded PDF</string>
    <string name="add_documents">Add Documents</string>
    <string name="logout">Logout</string>
    <string name="fragment_logout">Logout</string>
    <string name="fragment_add_documents">AddDocuments</string>
    <string name="fragment_contact_us">ContactUs</string>
    <string name="fragment_change_password">ChangePassword</string>
    <string name="profile">MyProfile</string>
    <string name="fragment_home">Home</string>
    <string name="address"> C-205,Gali number 4,JwalaNagar,Sahadara,North East Delhi,Sahadara, Delhi-110032</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address1">203 Vardhman Indraprastha plaza lsc-11, l p Extension Delhi-110092</string>
    <string name="address2">Cc-15,4th floor ansal plaza sector-1,vaishali Ghaziabad</string>
    <string name="image">image</string>
    <string name="pdf">Pdf Upload</string>
    <string name="date_of_joining">Date of Joining :</string>
    <string name="company">Company</string>
    <string name="payment_mode">Payment Mode:</string>
    <string name="aadhar_number">Aadhar Number :</string>
    <string name="pan_number">Pan Number:</string>
    <string name="ifsc">IFSC :</string>
    <string name="account_number">Account Number :</string>


    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="no_internet_connection">No Internet Connection :</string>
    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="unable_to_open_file">Unable to open file</string>
    <string name="txt_val"> Already Marked</string>
    <string name="gps_status_enabled">Enable your GPS</string>
    <string name="gps_status_disabled">GPS disabled</string>
</resources>