<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_group_1">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/my_profile"
        android:icon="@drawable/person"
        android:title="@string/my_profile" />

    <item
        android:id="@+id/documents"
        android:icon="@drawable/attach"
        android:visible="false"
        android:title="@string/attach_documents" />

    <item
        android:id="@+id/contact_us"
        android:icon="@drawable/mail"
        android:title="@string/contact_us" />
        <item
            android:id="@+id/export_img"
            android:icon="@drawable/export_image"
            android:visible="false"
            android:title="@string/uploaded_doc" />
        <item
            android:id="@+id/export_pd"
            android:icon="@drawable/export_pdf"
            android:visible="false"
            android:title="@string/uploaded_pdf" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />

    </group>
</menu>